added more test and changed /login and /delete_account and added /user
